[package]
name = "gmssl-src"
version = "0.1.0"
authors = ["Jason Honor<jasonhonor@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/acovo/gmssl-src-rs"
description = """
Source of GmSSL and logic to build it.
"""
exclude = [
  'gmssl/fuzz/corpora/*',
  'gmssl/pyca-cryptography/*',
  'gmssl/wycheproof/*',
  'gmssl/boringssl/*',
  'gmssl/krb5/*',
  'gmssl/test/recipes/*',
  'gmssl/gost-engine/*',
  'gmssl/demos/*',
  'gmssl/tlslite-ng/*',
  'gmssl/tlsfuzzer/*',
  'gmssl/python-ecdsa/*',
  'gmssl/oqs-provider/*',
]

[features]
default = []
# Enables compilation of the legacy provider, which must be loaded at runtime to use various
# uncommon or insecure algorithms.
legacy = []
# Enables compilation of some older algorithms: md2 (hash), rc5 (block cypher) and enabled use of
# some weaker algorithms in SSL connections. These are generally not recommended for use.
weak-crypto = []
# Enables compilation of the Camellia symmetric key block cypher. Since hardware acceleration for
# it is not available on most systems, this is not as used as AES.
camellia = []
# Enables compilation of International Data Encryption Algorithm (IDEA), a symmetric key block
# cypher sometimes used as an AES128 alternative.
idea = []
# Enables compilation of SEED, a symmetric key block cypher mostly used in South Korea, but
# otherwise not widely supported.
seed = []

[workspace]
members = ['testcrate']
exclude = ['target']

[dependencies]
cc = "1.0.79"
