[package]
name = "testcrate"
version = "0.1.0"
authors = ["Jason Honor<jasonhonor@outlook.com>"]

[dependencies]
libc = "0.2"
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", default-features = false, optional = true }

[[bin]]
name = 'package'
required-features = ['package']

[features]
package = ['tar', 'flate2']

[build-dependencies]
gmssl-src = { path = ".." }
